--- a/style/style.css
+++ b/style/style.css
@@ -80,30 +80,6 @@ textarea { resize: none; }
 .splashbox { position: fixed; padding: 0; background-color: transparent; border: none; }
 .splashbox img { cursor: pointer; }
 .splashbox .imClose { position: absolute; top: -10px; right: -10px; }
-
-
-/* Advertising Corner */
-#splashbox-advcorner .imClose { position: absolute; top: 0; right: 0; }
-html:not(.no-cssanimations) #splashbox-advcorner.animated {   -webkit-animation-duration: 1000ms;
-  animation-duration: 1000ms;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-@-webkit-keyframes splashbox-advcorner-anim-swing {
-	20% { -webkit-transform: rotate3d(0, 0, 1, 15deg);    transform: rotate3d(0, 0, 1, 15deg); }
-	40% { -webkit-transform: rotate3d(0, 0, 1, -10deg);    transform: rotate3d(0, 0, 1, -10deg); }
-	60% { -webkit-transform: rotate3d(0, 0, 1, 5deg);    transform: rotate3d(0, 0, 1, 5deg); }
-	80% { -webkit-transform: rotate3d(0, 0, 1, -5deg);    transform: rotate3d(0, 0, 1, -5deg); }
-	100% { -webkit - transform: rotate3d(0, 0, 1, 0deg); transform: rotate3d(0, 0, 1, 0deg); }
-}
-@keyframes splashbox-advcorner-anim-swing {
-	20% { -webkit-transform: rotate3d(0, 0, 1, 15deg);    transform: rotate3d(0, 0, 1, 15deg); }
-	40% { -webkit-transform: rotate3d(0, 0, 1, -10deg);    transform: rotate3d(0, 0, 1, -10deg); }
-	60% { -webkit-transform: rotate3d(0, 0, 1, 5deg);    transform: rotate3d(0, 0, 1, 5deg); }
-	80% { -webkit-transform: rotate3d(0, 0, 1, -5deg);    transform: rotate3d(0, 0, 1, -5deg); }
-	100% { -webkit - transform: rotate3d(0, 0, 1, 0deg); transform: rotate3d(0, 0, 1, 0deg); }
-}
-#splashbox-advcorner.animated.swing {  -webkit-animation-name: splashbox-advcorner-anim-swing;  animation-name: splashbox-advcorner-anim-swing; -webkit-transform-origin: top center;  transform-origin: top center; }
 #welcome-flags { margin: 0 auto; text-align: center; }
 #welcome-flags div { display: inline-block; margin: 10px; }
 #welcome-mediaplayertarget { overflow: hidden; }
@@ -126,19 +102,7 @@ html:not(.no-cssanimations) #splashbox-advcorner.animated {   -webkit-animation-
 .topic-star-fixer-small { height: 16px; }
 .topic-pagination { text-align: center; margin: 7px 0; }
 .variable-star-rating { cursor: pointer; }
-#media-query-to-js { position: absolute; display: none; }@media (min-width: 960px) {
-	#media-query-to-js { width: 960px; }
-}
-@media (max-width: 959px) and (min-width: 720px) {
-	#media-query-to-js { width: 720px; }
-}
-@media (max-width: 719px) and (min-width: 480px) {
-	#media-query-to-js { width: 480px; }
-}
-@media (max-width: 479px) {
-	#media-query-to-js { width: 0px; }
-}
-@media all and (min-width:1px) { .media-test { position: absolute; } }
+#media-query-to-js { position: absolute; display: none; }@media all and (min-width:1px) { .media-test { position: absolute; } }
 .browser-comp-message { position: fixed; bottom: 0; left: 0; right: 0; z-index: 10600; }
 .browser-comp-message.severity-error {top: 0; background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGNiOAMAANUAz5n+TlUAAAAASUVORK5CYII='); }
 .browser-comp-message div { padding: 20px; border: 2px solid #888; background-color: #000;}
