--- a/pcss/branches.css
+++ b/pcss/branches.css
@@ -104,15 +104,17 @@ h1#imPgTitle { position: relative; float: left; }
 #imTextObject_6_01_tab0 .fs16 { vertical-align: baseline; font-size: 16pt;line-height: 28px; }
 #imTextObject_6_01_tab0 .cf1 { color: rgb(0, 0, 128); }
 #imTextObject_6_01_tab0 .fs18 { vertical-align: baseline; font-size: 18pt;line-height: 31px; }
+#imTextObject_6_01_tab0 .fs12 { vertical-align: baseline; font-size: 12pt; }
 #imTextObject_6_01_tab0 .fs14 { vertical-align: baseline; font-size: 14pt; }
 #imTextObject_6_01_tab0 .ff1 { font-family: 'Segoe UI Web (Cyrillic)'; }
 #imTextObject_6_01_tab0 .image-1 { width: 294px; height: 221px; }
 #imTextObject_6_01_tab0 .image-2 { width: 30px; height: 30px; }
 #imTextObject_6_01_tab0 .image-3 { width: 30px; height: 30px; }
 #imTextObject_6_01_tab0 .image-4 { width: 30px; height: 30px; }
+#imTextObject_6_01_tab0 .image-0 { width: 30px; height: 30px; }
 #imTextObject_6_01 .text-container {border-style: solid; border-color: #A9A9A9; border-width: 0 1px 1px 1px;width: 100%; box-sizing: border-box;}
 #imTextObject_6_01 .text-container {margin: 0 auto; position: relative; overflow: hidden;  background-color: #FFFFFF;  }
-#imTextObject_6_01 .text-container {height: 463px; }
+#imTextObject_6_01 .text-container {height: 496px; }
 #imCell_2 { display: block; position: relative; overflow: hidden; }
 #imCellStyle_2 { position: relative; box-sizing: border-box; text-align: center; z-index: 2;}
 #imCellStyleGraphics_2 { position: absolute; top: 3px; bottom: 3px; background-color: transparent; }
@@ -143,13 +145,14 @@ h1#imPgTitle { position: relative; float: left; }
 #imTextObject_6_02_tab0 .fs16 { vertical-align: baseline; font-size: 16pt;line-height: 28px; }
 #imTextObject_6_02_tab0 .fs18 { vertical-align: baseline; font-size: 18pt;line-height: 31px; }
 #imTextObject_6_02_tab0 .cf1 { color: rgb(0, 0, 128); }
+#imTextObject_6_02_tab0 .fs12 { vertical-align: baseline; font-size: 12pt; }
 #imTextObject_6_02_tab0 .fs14 { vertical-align: baseline; font-size: 14pt;line-height: 25px; }
 #imTextObject_6_02_tab0 .image-0 { width: 30px; height: 30px; }
 #imTextObject_6_02_tab0 .image-1 { width: 30px; height: 30px; }
-#imTextObject_6_02_tab0 .image-2 { width: 30px; height: 30px; }
+#imTextObject_6_02_tab0 .image-3 { width: 30px; height: 30px; }
 #imTextObject_6_02 .text-container {border-style: solid; border-color: #A9A9A9; border-width: 0 1px 1px 1px;width: 100%; box-sizing: border-box;}
 #imTextObject_6_02 .text-container {margin: 0 auto; position: relative; overflow: hidden;  background-color: #FFFFFF;  }
-#imTextObject_6_02 .text-container {height: 232px; }
+#imTextObject_6_02 .text-container {height: 251px; }
 #imCell_3 { display: block; position: relative; overflow: hidden; }
 #imCellStyle_3 { position: relative; box-sizing: border-box; text-align: center; z-index: 2;}
 #imCellStyleGraphics_3 { position: absolute; top: 3px; bottom: 3px; background-color: transparent; }
@@ -192,14 +195,14 @@ h1#imPgTitle { position: relative; float: left; }
 .imContentDataContainer { width: 948px; margin-left: auto; margin-right: auto; padding: 0 5px 0 5px; }
 #imPgTitle { width: 934px; margin-left: 6px; margin-right: 6px; }
 #imGroup_1 { width: 948px; }
-#imCell_1 { width: 324px; min-height: 469px;  padding-top: 3px; padding-bottom: 3px; padding-left: 3px; padding-right: 3px; }
-#imCellStyle_1 { width: 324px; min-height: 469px; padding: 3px 3px 3px 3px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 5px solid #FF0000; }
+#imCell_1 { width: 324px; min-height: 502px;  padding-top: 3px; padding-bottom: 3px; padding-left: 3px; padding-right: 3px; }
+#imCellStyle_1 { width: 324px; min-height: 502px; padding: 3px 3px 3px 3px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 5px solid #FF0000; }
 #imCellStyleGraphics_1 { left: 3px; right: 3px; }
-#imCell_2 { width: 296px; min-height: 469px;  padding-top: 3px; padding-bottom: 3px; padding-left: 3px; padding-right: 3px; }
-#imCellStyle_2 { width: 296px; min-height: 469px; padding: 3px 3px 234px 3px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 5px solid #FF0000; }
+#imCell_2 { width: 296px; min-height: 502px;  padding-top: 3px; padding-bottom: 3px; padding-left: 3px; padding-right: 3px; }
+#imCellStyle_2 { width: 296px; min-height: 502px; padding: 3px 3px 248px 3px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 5px solid #FF0000; }
 #imCellStyleGraphics_2 { left: 3px; right: 3px; }
-#imCell_3 { width: 310px; min-height: 469px;  padding-top: 3px; padding-bottom: 3px; padding-left: 3px; padding-right: 3px; }
-#imCellStyle_3 { width: 310px; min-height: 469px; padding: 3px 3px 3px 3px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+#imCell_3 { width: 310px; min-height: 502px;  padding-top: 3px; padding-bottom: 3px; padding-left: 3px; padding-right: 3px; }
+#imCellStyle_3 { width: 310px; min-height: 502px; padding: 3px 3px 36px 3px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
 #imCellStyleGraphics_3 { left: 3px; right: 3px; }
 
 #imHeader_imTextObject_02_wrapper { position: absolute; top: 92px; left: 30px; width: 406px; height: 191px; z-index: 1; overflow-y: hidden; }
